--- a/HarvestJump/HarvestJump.csproj
+++ b/HarvestJump/HarvestJump.csproj
@@ -49,7 +49,7 @@
     <Compile Include="MonoClasses\Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Map\RandomJumpMap.cs" />
-    <Compile Include="ScreenManager\GameScreens\PlayScreenUI.cs" />
+    <Compile Include="ScreenManager\GameScreens\PlayScreen.cs" />
     <Compile Include="Manager\ResolutionManager.cs" />
     <Compile Include="ScreenManager\ScreenManager.cs" />
     <Compile Include="Grafik\Sprite.cs" />
