--- a/HarvestJump/HarvestJump.csproj
+++ b/HarvestJump/HarvestJump.csproj
@@ -65,6 +65,9 @@
   <ItemGroup>
     <Content Include="Content\IntroAssets\CompanyLogo.png" />
     <Content Include="Content\blackPixel.png" />
+    <Content Include="Content\MapAssets\grassBlock.png">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
     <Content Include="Icon.ico" />
   </ItemGroup>
   <ItemGroup>
