--- a/HarvestJump/HarvestJump.csproj
+++ b/HarvestJump/HarvestJump.csproj
@@ -66,7 +66,9 @@
     <Content Include="Content\IntroAssets\CompanyLogo.png" />
     <Content Include="Content\blackPixel.png" />
     <Content Include="Content\IntroAssets\Logo1.png" />
-    <Content Include="Content\IntroAssets\LogoSound.wav" />
+    <Content Include="Content\IntroAssets\LogoSound.wav">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
     <Content Include="Content\MapAssets\grassBlock.png">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
