--- a/HarvestJump/HarvestJump.csproj
+++ b/HarvestJump/HarvestJump.csproj
@@ -105,7 +105,9 @@
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
     <Content Include="Content\MapAssets\GrassPlatformSheet.png" />
-    <Content Include="Content\PlayAssets\LevelBackground.mp3" />
+    <Content Include="Content\PlayAssets\LevelBackground.mp3">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
     <Content Include="Content\PlayAssets\Player.png" />
     <Content Include="Content\PlayAssets\PlayerIdleAnimation.png" />
     <Content Include="Icon.ico" />
