--- a/HarvestJump/HarvestJump.csproj
+++ b/HarvestJump/HarvestJump.csproj
@@ -91,7 +91,7 @@
     <Compile Include="Map\MovingPlatform.cs" />
     <Compile Include="GameEntity\Raptor.cs" />
     <Compile Include="Manager\Waypoint.cs" />
-    <Compile Include="Manager\AISystem.cs" />
+    <Compile Include="HelperClasses\AISystem.cs" />
     <Compile Include="HelperClasses\CollisionHelper.cs" />
     <Compile Include="HelperClasses\BoundingBox.cs" />
     <Compile Include="Interfaces\ICollide.cs" />
