--- a/HarvestJump/HarvestJump.csproj
+++ b/HarvestJump/HarvestJump.csproj
@@ -182,6 +182,7 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="app.config" />
+    <None Include="Content\Fonts\DebugFont.spritefont" />
     <None Include="Content\Fonts\LeagueFont.spritefont">
       <SubType>Designer</SubType>
     </None>
